Perubahan informasi page like tentang, and other tab

--- a/pages/mts.html
+++ b/pages/mts.html
@@ -84,6 +84,7 @@
         <section>
             <div class="tab-navigation">
                 <button class="tab-button active" data-tab="tentang">Tentang</button>
+                <button class="tab-button" data-tab="visi-misi">Visi dan Misi</button>
                 <button class="tab-button" data-tab="akademik">Akademik</button>
                 <button class="tab-button" data-tab="ekstrakurikuler">Ekstrakurikuler</button>
                 <button class="tab-button" data-tab="spmb">SPMB</button>
@@ -93,59 +94,146 @@
         <!-- Tab Content -->
         <section class="tab-content active" id="tentang">
             <h2>Tentang Madrasah Tsanawiyah</h2>
-            <p>Madrasah Tsanawiyah (MTs) adalah lembaga pendidikan yang menyediakan kurikulum komprehensif untuk siswa di tingkat sekolah menengah pertama. Misi kami adalah menumbuhkan cinta terhadap pembelajaran dan mengembangkan individu yang berimbang yang siap menghadapi tantangan masa depan.</p>
-            <p>Kami fokus pada pengembangan pemikiran kritis, kepemimpinan, dan pembinaan karakter Islami sambil memastikan siswa mendapatkan fondasi akademis yang kuat.</p>
+            <p>
+                MTs Ma’arif NU Ngaban Tanggulangin merupakan madrasah tsanawiyah unggulan di Kabupaten Sidoarjo 
+                yang telah berdiri sejak tahun 1963 dan terakreditasi A. Dengan pengalaman panjang dalam dunia pendidikan, 
+                kami berkomitmen membentuk generasi Islami yang berilmu, berakhlakul karimah, dan siap menghadapi tantangan zaman.
+            </p>
+            <p>
+                Bernaung di bawah Yayasan BPPPMNU Kabupaten Sidoarjo, kami memadukan pendidikan akademik berkualitas 
+                dengan penguatan nilai-nilai keislaman. Didukung tenaga pendidik profesional dan lingkungan belajar yang kondusif, 
+                MTs Ma’arif NU Ngaban Tanggulangin hadir sebagai pilihan tepat bagi orang tua yang menginginkan pendidikan terbaik — 
+                unggul dalam prestasi, kokoh dalam iman, dan siap melangkah ke jenjang pendidikan yang lebih tinggi.
+            </p>
         </section>
-        
+
+
+        <section class="tab-content" id="visi-misi">
+            <h2>Visi dan Misi</h2>
+
+            <!-- VISI -->
+            <h3>A. Visi</h3>
+            <p>“Mewujudkan Madrasah Bergenerasi Islami dan Berprestasi”</p>
+            <p>
+                Visi ini mencerminkan komitmen madrasah dalam membentuk generasi yang memiliki 
+                nilai-nilai keislaman yang kuat, berakhlakul karimah, serta mampu meraih 
+                prestasi baik di bidang akademik maupun non-akademik.
+            </p>
+
+            <!-- MISI -->
+            <h3>B. Misi</h3>
+            <p>
+                Dalam mewujudkan visi tersebut, madrasah menetapkan misi sebagai berikut:
+            </p>
+            <ol style="margin: 10px 0; padding-left: 20px; text-align: left;">
+                <li>Membiasakan peserta didik melaksanakan shalat lima waktu dan shalat sunnah dhuha.</li>
+                <li>Menghafal Al-Qur’an juz 30, membaca Yasin dan tahlil, melaksanakan istighosah serta Asmaul Husna.</li>
+                <li>Mengembangkan perilaku terpuji serta menjadi teladan bagi teman dan warga madrasah (5S: Salam, Sapa, Senyum, Sopan, dan Santun).</li>
+                <li>Mengalokasikan waktu untuk kegiatan membaca Al-Qur’an dan hafalan.</li>
+                <li>Melaksanakan tata tertib yang berlaku untuk seluruh warga madrasah.</li>
+                <li>Meningkatkan kreativitas guru dalam proses pembelajaran.</li>
+                <li>Membiasakan berlatih mengerjakan soal-soal berbasis HOTS.</li>
+            </ol>
+        </section>
+
         <section class="tab-content" id="akademik">
             <h2>Penawaran Akademik</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-mosque"></i> Studi Islam</h3>
-                    <p>Pendidikan agama Islam yang komprehensif meliputi Al-Qur'an, Hadits, Fiqh, dan Akhlak.</p>
+                    <h3><i class="fas fa-mosque"></i> Pendidikan Keislaman</h3>
+                    <p>
+                        Pembelajaran Al-Qur’an Hadits, Fiqih, Aqidah Akhlak, SKI, dan Bahasa Arab 
+                        yang dipadukan dengan program tahfidz Juz 30 serta pembiasaan ibadah harian.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-book"></i> Matematika</h3>
-                    <p>Pengembangan kemampuan berhitung dan pemecahan masalah melalui pembelajaran bermakna.</p>
+                    <h3><i class="fas fa-book"></i> Kurikulum Nasional Terpadu</h3>
+                    <p>
+                        Mata pelajaran umum seperti Matematika, IPA, IPS, Bahasa Indonesia, 
+                        dan Bahasa Inggris untuk membangun fondasi akademik yang kuat.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-flask"></i> IPA (Sains)</h3>
-                    <p>Eksplorasi ilmu alam, biologi, kimia, dan fisika dengan pendekatan eksperimental.</p>
+                    <h3><i class="fas fa-brain"></i> Penguatan Literasi & HOTS</h3>
+                    <p>
+                        Pembelajaran berbasis Higher Order Thinking Skills (HOTS) 
+                        untuk melatih kemampuan berpikir kritis, analitis, dan kreatif.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-globe"></i> Ilmu Sosial</h3>
-                    <p>Panduan tentang sejarah, geografi, ekonomi, dan kewarganegaraan Indonesia.</p>
+                    <h3><i class="fas fa-star"></i> Pengembangan Karakter</h3>
+                    <p>
+                        Pembinaan akhlakul karimah melalui budaya 5S (Salam, Sapa, Senyum, 
+                        Sopan, Santun) serta kegiatan keagamaan rutin.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-book"></i> Bahasa</h3>
-                    <p>Pengembangan kemampuan Bahasa Indonesia, Bahasa Inggris, dan bahasa asing lainnya.</p>
+                    <h3><i class="fas fa-users"></i> Ekstrakurikuler & Kepemimpinan</h3>
+                    <p>
+                        Kegiatan pramuka, seni Islami, olahraga, dan organisasi siswa 
+                        untuk mengembangkan bakat, disiplin, dan jiwa kepemimpinan.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-palette"></i> Seni dan Budaya</h3>
-                    <p>Pembelajaran seni rupa, musik, tari, dan pelestarian budaya lokal.</p>
+                    <h3><i class="fas fa-graduation-cap"></i> Persiapan Jenjang Lanjutan</h3>
+                    <p>
+                        Pembekalan akademik dan spiritual yang optimal untuk 
+                        melanjutkan ke MA, SMA, atau SMK unggulan.
+                    </p>
                 </div>
+
             </div>
         </section>
         
         <section class="tab-content" id="ekstrakurikuler">
             <h2>Kegiatan Ekstrakurikuler</h2>
-            <p>Kami percaya pada pentingnya pendidikan yang seimbang. Siswa kami dapat mengikuti berbagai kegiatan ekstrakurikuler, termasuk:</p>
+            <p>
+                Kami percaya bahwa pendidikan tidak hanya berlangsung di dalam kelas. 
+                Melalui kegiatan ekstrakurikuler, siswa mengembangkan bakat, karakter, 
+                kepemimpinan, serta keterampilan sosial yang akan menjadi bekal masa depan.
+            </p>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-trophy"></i> Tim Olahraga</h3>
-                    <p>Perkembangan fisik melalui berbagai cabang olahraga seperti sepak bola, bola basket, dan voli.</p>
+                    <h3><i class="fas fa-mosque"></i> Hadrah & Seni Islami</h3>
+                    <p>
+                        Pengembangan bakat seni religi melalui sholawat, rebana, 
+                        dan kegiatan seni Islami lainnya untuk memperkuat kecintaan kepada agama.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-microphone"></i> Klub Debat</h3>
-                    <p>Pengembangan keterampilan berbicara publik dan berpikir kritis.</p>
+                    <h3><i class="fas fa-fist-raised"></i> Pencak Silat (Pagar Nusa)</h3>
+                    <p>
+                        Melatih kedisiplinan, ketangguhan, dan pembentukan karakter 
+                        melalui seni bela diri khas Nahdlatul Ulama.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-palette"></i> Program Seni dan Musik</h3>
-                    <p>Eksplorasi seni rupa, musik, dan pertunjukan untuk mengekspresikan kreativitas.</p>
+                    <h3><i class="fas fa-campground"></i> Pramuka</h3>
+                    <p>
+                        Membentuk jiwa kepemimpinan, kemandirian, kerja sama tim, 
+                        dan tanggung jawab melalui kegiatan kepramukaan.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-handshake"></i> Proyek Pelayanan Masyarakat</h3>
-                    <p>Pengembangan tanggung jawab sosial melalui kegiatan pengabdian ke masyarakat.</p>
+                    <h3><i class="fas fa-futbol"></i> Olahraga</h3>
+                    <p>
+                        Berbagai cabang olahraga seperti futsal, voli, dan lainnya 
+                        untuk menjaga kebugaran, sportivitas, dan semangat kompetitif.
+                    </p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-star"></i> OSIS & Kepemimpinan</h3>
+                    <p>
+                        Wadah pengembangan kepemimpinan, manajemen kegiatan, 
+                        serta tanggung jawab organisasi siswa.
+                    </p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-book-quran"></i> Tahfidz & Kajian Keislaman</h3>
+                    <p>
+                        Program pendalaman hafalan Al-Qur’an dan kajian rutin 
+                        untuk memperkuat spiritualitas dan akhlakul karimah.
+                    </p>
                 </div>
             </div>
         </section>
