--- a/pages/sd-maarif.html
+++ b/pages/sd-maarif.html
@@ -93,10 +93,23 @@
 
         <!-- Tab Content -->
         <section class="tab-content active" id="tentang">
-            <h2>Tentang SD Maarif</h2>
-            <p>Sekolah Dasar Maarif (SD) berkomitmen untuk memberikan pendidikan berkualitas yang mendorong keunggulan akademis dan pengembangan karakter. Kurikulum kami dirancang untuk memenuhi kebutuhan siswa dan mempersiapkan mereka menghadapi tantangan masa depan.</p>
-            <p>Kami mengintegrasikan nilai-nilai Islam, pembelajaran akademik yang kuat, dan pengembangan keterampilan abad ke-21 untuk menciptakan siswa yang berkompetensi, berakhlak mulia, dan peduli terhadap lingkungan.</p>
+            <h2>Tentang SD Ma’arif NU Ngaban</h2>
+            <p>
+                SD Ma’arif NU Ngaban Tanggulangin adalah sekolah dasar swasta unggulan di Kabupaten Sidoarjo 
+                yang telah berdiri sejak tahun 1953 dan berkomitmen menghadirkan pendidikan berkualitas 
+                berbasis nilai-nilai Ahlussunnah wal Jama’ah. Dengan pengalaman panjang dalam mendidik generasi bangsa, 
+                kami memadukan kurikulum nasional dengan pembinaan karakter Islami untuk membentuk siswa yang cerdas, 
+                berakhlakul karimah, dan percaya diri.
+            </p>
+            <p>
+                Didukung tenaga pendidik profesional dan lingkungan belajar yang kondusif, 
+                kami menghadirkan pembelajaran yang aktif, kreatif, dan menyenangkan. 
+                Program unggulan seperti tahfidz Al-Qur’an dan kegiatan keagamaan rutin menjadi bagian dari komitmen kami 
+                dalam membangun fondasi akademik dan spiritual yang kuat sejak usia dini, 
+                sehingga siswa siap melanjutkan ke jenjang pendidikan berikutnya dengan penuh percaya diri.
+            </p>
         </section>
+
         <section class="tab-content" id="visi-misi">
             <h2>Visi dan Misi</h2>
             <h3>SD MA'ARIF NU NGABAN</h3>
@@ -115,47 +128,59 @@
             <h2>Program Pendidikan</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-book"></i> Kurikulum Komprehensif</h3>
-                    <p>Mengintegrasikan ilmu pengetahuan umum, agama Islam, dan pembelajaran praktis.</p>
+                    <h3><i class="fas fa-book"></i> Kurikulum Nasional Terintegrasi</h3>
+                    <p>Menggabungkan Kurikulum Nasional dengan pendidikan Islam Ahlussunnah wal Jama’ah untuk membentuk siswa yang cerdas, berakhlakul karimah, dan siap menghadapi masa depan.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-quran"></i> Program Tahfidz Qur'an</h3>
-                    <p>Program menghafal Al-Qur'an dengan metode yang menyenangkan dan efektif.</p>
+                    <h3><i class="fas fa-quran"></i> Program Tahfidz & Tahsin Al-Qur'an</h3>
+                    <p>Pembelajaran membaca dan menghafal Al-Qur’an dengan metode menyenangkan, terstruktur, dan dibimbing guru berpengalaman.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-laptop"></i> Teknologi dan Literasi Digital</h3>
-                    <p>Pengenalan teknologi dan pengembangan keterampilan digital sejak dini.</p>
+                    <h3><i class="fas fa-laptop"></i> Literasi & Teknologi Digital</h3>
+                    <p>Pengenalan teknologi, komputer dasar, serta penguatan literasi dan numerasi untuk membekali siswa dengan keterampilan abad ke-21.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-running"></i> Kegiatan Ekstrakurikuler</h3>
-                    <p>Beragam kegiatan di luar jam sekolah meliputi olahraga, seni, dan keterampilan.</p>
+                    <h3><i class="fas fa-running"></i> Ekstrakurikuler Beragam</h3>
+                    <p>Pramuka, olahraga, seni, dan berbagai kegiatan pengembangan minat bakat untuk menumbuhkan kepercayaan diri dan kreativitas siswa.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-handshake"></i> Program Pembinaan Karakter</h3>
-                    <p>Pengembangan karakter, kepemimpinan, dan tanggung jawab sosial siswa.</p>
+                    <h3><i class="fas fa-handshake"></i> Pembinaan Karakter Islami</h3>
+                    <p>Pembiasaan sholat berjamaah, disiplin, tanggung jawab, serta penanaman nilai akhlakul karimah dalam kehidupan sehari-hari.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-globe"></i> Keterlibatan Komunitas</h3>
-                    <p>Program keterlibatan siswa dengan komunitas lokal dan pelayanan masyarakat.</p>
+                    <h3><i class="fas fa-globe"></i> Program Sosial & Kepedulian Lingkungan</h3>
+                    <p>Kegiatan sosial dan peduli lingkungan untuk membentuk siswa yang empati, peduli, dan aktif dalam masyarakat.</p>
                 </div>
             </div>
         </section>
         
         <section class="tab-content" id="prestasi">
-            <h2>Prestasi dan Pencapaian</h2>
-            <p>Siswa kami telah secara konsisten berprestasi dalam berbagai kompetisi akademik dan proyek pengabdian masyarakat, menunjukkan talenta dan komitmen mereka terhadap keunggulan.</p>
+            <h2>Prestasi Siswa</h2>
+            <p>Komitmen kami dalam membina akademik dan karakter telah membuahkan berbagai prestasi membanggakan di tingkat kecamatan hingga kabupaten.</p>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-trophy"></i> Kompetisi Akademik</h3>
-                    <p>Penghargaan dalam kompetisi Matematika, IPA, Bahasa Indonesia, dan Bahasa Inggris.</p>
+                    <h3><i class="fas fa-medal"></i> Prestasi Akademik</h3>
+                    <p>Juara lomba Matematika, IPA, dan Olimpiade Sains tingkat kecamatan dan kabupaten sebagai bukti keunggulan pembelajaran kami.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-music"></i> Kompetisi Seni dan Olahraga</h3>
-                    <p>Prestasi dalam tilawah Qur'an, seni, dan berbagai cabang olahraga.</p>
+                    <h3><i class="fas fa-quran"></i> Prestasi Keagamaan</h3>
+                    <p>Juara lomba Tahfidz, Tartil, dan Musabaqah Tilawatil Qur’an (MTQ) yang mencerminkan kekuatan pendidikan religius siswa.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-people-group"></i> Pengabdian Masyarakat</h3>
-                    <p>Program aktif siswa dalam kegiatan sosial dan pemberdayaan masyarakat.</p>
+                    <h3><i class="fas fa-futbol"></i> Prestasi Olahraga</h3>
+                    <p>Keberhasilan tim olahraga dalam kompetisi futsal, sepak bola, dan atletik tingkat kecamatan.</p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-palette"></i> Prestasi Seni & Kreativitas</h3>
+                    <p>Penghargaan dalam lomba menggambar, kaligrafi, dan seni pertunjukan yang menunjukkan bakat dan kreativitas siswa.</p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-award"></i> Penghargaan Sekolah</h3>
+                    <p>Partisipasi aktif dan penghargaan dalam berbagai kegiatan pendidikan, sosial, dan keagamaan di lingkungan masyarakat.</p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-star"></i> Siswa Berprestasi</h3>
+                    <p>Pencapaian siswa berprestasi setiap tahun sebagai wujud pembinaan berkelanjutan dan dukungan penuh dari sekolah.</p>
                 </div>
             </div>
         </section>
