--- a/pages/smk.html
+++ b/pages/smk.html
@@ -89,6 +89,7 @@
         <section>
             <div class="tab-navigation">
                 <button class="tab-button active" data-tab="tentang">Tentang</button>
+                <button class="tab-button" data-tab="visi-misi">Visi dan Misi</button>
                 <button class="tab-button" data-tab="program">Program</button>
                 <button class="tab-button" data-tab="karir">Karir</button>
                 <button class="tab-button" data-tab="spmb">SPMB</button>
@@ -98,59 +99,102 @@
         <!-- Tab Content -->
         <section class="tab-content active" id="tentang">
             <h2>Tentang SMK Kami</h2>
-            <p>Selamat datang di Sekolah Menengah Kejuruan (SMK) Majelis Wakil Cabang Nahdlatul Ulama. SMK kami berkomitmen untuk memberikan siswa dengan keterampilan dan pengetahuan yang diperlukan untuk karir mereka yang sukses.</p>
-            <p>Kami percaya pada pembelajaran praktis yang menghubungkan teori akademis dengan aplikasi dunia nyata, mempersiapkan siswa tidak hanya untuk lulus ujian, tetapi untuk berkontribusi produktif di industri.</p>
+            <p>
+                SMK Ma’arif Tanggulangin hadir sebagai pilihan terbaik untuk mencetak generasi islami yang unggul dan berprestasi. 
+                Kami tidak hanya fokus pada pencapaian akademik, tetapi juga membentuk karakter berakhlakul karimah 
+                yang siap menghadapi tantangan masa depan.
+            </p>
+            <p>
+                Melalui program keahlian Manajemen Perkantoran dan Rekayasa Perangkat Lunak, siswa dibekali 
+                keterampilan profesional, penguasaan teknologi, serta pengalaman belajar yang relevan dengan kebutuhan industri. 
+                Didukung tenaga pendidik berkompeten, fasilitas yang memadai, dan lingkungan belajar yang inspiratif, 
+                kami berkomitmen melahirkan lulusan yang siap kerja, siap kuliah, dan siap bersaing di era digital 
+                dengan tetap mengedepankan nilai IMTAQ.
+            </p>
         </section>
         
+        <section class="tab-content" id="visi-misi">
+            <h2>Visi dan Misi</h2>
+
+            <!-- VISI -->
+            <h3>A. Visi</h3>
+            <p>
+                “Mewujudkan sekolah yang unggul dalam prestasi, berakhlak mulia, dan berbudaya global”
+            </p>
+
+            <!-- MISI -->
+            <h3>B. Misi</h3>
+            <p>Dalam rangka mewujudkan visi tersebut, maka ditetapkan misi sebagai berikut:</p>
+            <ol style="margin: 10px 0; padding-left: 20px; text-align: left;">
+                <li>
+                    Menghasilkan lulusan yang beriman, bertakwa, berakhlakul karimah, 
+                    kompeten dan profesional, serta berperan aktif di lingkungan 
+                    dengan mengedepankan IMTAQ.
+                </li>
+            </ol>
+        </section>
+
         <section class="tab-content" id="program">
             <h2>Program Kejuruan yang Ditawarkan</h2>
             <div class="program-grid">
                 <div class="program-card">
                     <h3><i class="fas fa-laptop"></i> Teknik Komputer dan Jaringan</h3>
-                    <p>Pembelajaran instalasi, konfigurasi, dan pemeliharaan sistem komputer dan jaringan.</p>
+                    <p>
+                    Mempelajari dasar hingga pengembangan perangkat lunak, 
+                    pemrograman, pembuatan website dan aplikasi, manajemen basis data, 
+                    serta penerapan teknologi sesuai kebutuhan industri digital.
+                    </p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-wrench"></i> Teknik Otomotif</h3>
-                    <p>Pelatihan perawatan, perbaikan, dan modifikasi kendaraan dengan standar internasional.</p>
-                </div>
-                <div class="program-card">
-                    <h3><i class="fas fa-palette"></i> Desain Grafis dan Multimedia</h3>
-                    <p>Pengembangan keterampilan desain visual, animasi, dan produksi multimedia.</p>
-                </div>
-                <div class="program-card">
-                    <h3><i class="fas fa-utensils"></i> Tata Boga dan Perhotelan</h3>
-                    <p>Pelatihan manajemen perhotelan, pelayanan, dan seni kuliner modern.</p>
-                </div>
-                <div class="program-card">
-                    <h3><i class="fas fa-clipboard"></i> Administrasi Perkantoran</h3>
-                    <p>Pelatihan manajemen administrasi, akuntansi dasar, dan keterampilan kantor modern.</p>
-                </div>
-                <div class="program-card">
-                    <h3><i class="fas fa-shopping-cart"></i> Tata Niaga dan Pemasaran</h3>
-                    <p>Pembelajaran manajemen bisnis, pemasaran digital, dan keterampilan penjualan.</p>
+                    <h3><i class="fas fa-briefcase"></i> Manajemen Perkantoran</h3>
+                    <p>
+                    Membekali siswa dengan keterampilan administrasi perkantoran, 
+                    pengelolaan dokumen, pelayanan prima, penguasaan aplikasi perkantoran, 
+                    serta komunikasi profesional di dunia kerja.
+                    </p>
                 </div>
             </div>
         </section>
         
         <section class="tab-content" id="karir">
             <h2>Persiapan Karir</h2>
-            <p>Kurikulum kami dirancang untuk mempersiapkan siswa menghadapi dunia kerja dengan keterampilan praktis dan pelatihan industri.</p>
+            <p>
+                Di SMK Ma’arif Tanggulangin, persiapan karir bukan hanya janji — tetapi komitmen nyata. 
+                Kami membekali siswa dengan kompetensi teknis, soft skill profesional, serta pengalaman industri 
+                agar siap terjun ke dunia kerja maupun melanjutkan pendidikan ke jenjang lebih tinggi.
+            </p>
+
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-hammer"></i> Keterampilan Praktis</h3>
-                    <p>Pembelajaran hands-on dengan peralatan industri terkini dan standar kompetensi internasional.</p>
+                    <h3><i class="fas fa-industry"></i> Praktik Kerja Lapangan (PKL)</h3>
+                    <p>
+                        Siswa mendapatkan pengalaman langsung di dunia industri sesuai jurusan, 
+                        sehingga terbiasa dengan budaya kerja profesional dan standar perusahaan.
+                    </p>
                 </div>
+
                 <div class="program-card">
-                    <h3><i class="fas fa-building"></i> Magang Industri</h3>
-                    <p>Pengalaman bekerja langsung di perusahaan mitra untuk penguasaan keterampilan praktis.</p>
+                    <h3><i class="fas fa-certificate"></i> Penguatan Kompetensi</h3>
+                    <p>
+                        Pembelajaran berbasis proyek dan praktik intensif untuk memastikan 
+                        lulusan benar-benar menguasai keterampilan yang dibutuhkan industri.
+                    </p>
                 </div>
+
                 <div class="program-card">
-                    <h3><i class="fas fa-trophy"></i> Sertifikasi Profesional</h3>
-                    <p>Persiapan dan pendampingan untuk sertifikasi kompetensi yang diakui industri.</p>
+                    <h3><i class="fas fa-users"></i> Pengembangan Soft Skill</h3>
+                    <p>
+                        Pelatihan komunikasi, kerja tim, etika kerja, dan kepemimpinan 
+                        agar siswa siap bersaing secara profesional.
+                    </p>
                 </div>
+
                 <div class="program-card">
-                    <h3><i class="fas fa-briefcase"></i> Pengembangan Keterampilan Bisnis</h3>
-                    <p>Pembelajaran entrepreneurship dan manajemen bisnis untuk lulusan yang ingin berwirausaha.</p>
+                    <h3><i class="fas fa-briefcase"></i> Peluang Kerja & Kewirausahaan</h3>
+                    <p>
+                        Pembekalan kesiapan kerja, peluang rekrutmen industri, serta 
+                        pembelajaran kewirausahaan untuk menciptakan lulusan yang mandiri.
+                    </p>
                 </div>
             </div>
         </section>
