--- a/pages/tk.html
+++ b/pages/tk.html
@@ -54,7 +54,7 @@
         <section class="hero-section hero-section-school hero-section-tk">
             <img src="../assets/images/tk-logo.png" alt="TK Logo" class="hero-logo">
             <div class="hero-content">
-                <h2>Taman Kanak-Kanak Maarif NU</h2>
+                <h2>TKMNU 188 Ma'arif NU</h2>
                 <p>Membangun Fondasi Pendidikan yang Kuat dengan Metode Bermain Sambil Belajar</p>
             </div>
         </section>
@@ -94,11 +94,20 @@
 
         <!-- Tab Content -->
         <section class="tab-content active" id="tentang">
-            <h2>Tentang Taman Kanak-Kanak Kami</h2>
-            <p>Taman Kanak-Kanak (TK) adalah program pendidikan usia dini yang bertujuan untuk memberikan fondasi pendidikan yang kuat bagi anak-anak. Kurikulum kami dirancang untuk menumbuhkan kreativitas, keterampilan sosial, dan pengetahuan akademik dasar melalui aktivitas yang menyenangkan.</p>
-            <p>Kami percaya bahwa bermain adalah cara terbaik untuk belajar pada usia dini. Setiap aktivitas dirancang dengan cermat untuk mendukung perkembangan optimal anak secara fisik, emosional, sosial, dan intelektual.</p>
+            <h2>Tentang Kami</h2>
+            <p>
+                TK M NU 188 Maarif adalah lembaga pendidikan anak usia dini yang berkomitmen 
+                membangun fondasi karakter dan kecerdasan anak sejak dini. Berlokasi di Ngaban, 
+                Tanggulangin, Sidoarjo, kami menghadirkan lingkungan belajar yang aman, nyaman, 
+                dan penuh keceriaan.
+            </p>
+            <p>
+                Dengan pendekatan belajar sambil bermain, kami membantu anak tumbuh menjadi 
+                pribadi yang percaya diri, mandiri, dan berakhlakul karimah. Kami memadukan 
+                pendidikan umum dan nilai-nilai Islam Ahlussunnah wal Jama’ah untuk membentuk 
+                generasi yang cerdas, santun, dan siap melangkah ke jenjang pendidikan berikutnya.
+            </p>
         </section>
-
         <section class="tab-content" id="visi-misi">
             <h2>Visi dan Misi</h2>
             
@@ -129,54 +138,53 @@
         </section>
 
         <section class="tab-content" id="kurikulum">
-            <h2>Kurikulum Pendidikan</h2>
+            <h2>Kurikulum</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-palette"></i> Seni Kreatif</h3>
-                    <p>Mengembangkan imajinasi dan ekspresi diri melalui melukis, menggambar, dan kerajinan tangan.</p>
+                    <h3><i class="fas fa-brain"></i> Perkembangan Kognitif</h3>
+                    <p>Pengenalan angka, huruf, warna, dan konsep dasar melalui aktivitas kreatif dan menyenangkan.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-calculator"></i> Matematika Dasar</h3>
-                    <p>Pengenalan angka, bentuk, dan konsep dasar melalui permainan interaktif yang menyenangkan.</p>
+                    <h3><i class="fas fa-comments"></i> Perkembangan Bahasa</h3>
+                    <p>Melatih komunikasi, keberanian berbicara, serta kemampuan literasi awal anak.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-book"></i> Bahasa dan Literasi</h3>
-                    <p>Pengembangan keterampilan mendengarkan, berbicara, membaca, dan menulis dasar.</p>
+                    <h3><i class="fas fa-running"></i> Motorik Halus & Kasar</h3>
+                    <p>Aktivitas fisik dan kreatif untuk melatih koordinasi, keseimbangan, dan ketangkasan anak.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-running"></i> Pendidikan Jasmani</h3>
-                    <p>Permainan motorik kasar dan halus untuk mendukung perkembangan fisik anak.</p>
+                    <h3><i class="fas fa-heart"></i> Sosial & Emosional</h3>
+                    <p>Pembiasaan disiplin, kerja sama, empati, dan tanggung jawab dalam kehidupan sehari-hari.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-people-group"></i> Pengembangan Sosial</h3>
-                    <p>Belajar bekerja sama, berbagi, dan menghormati orang lain melalui aktivitas kelompok.</p>
-                </div>
-                <div class="program-card">
-                    <h3><i class="fas fa-mosque"></i> Nilai Islam</h3>
-                    <p>Pengenalan nilai-nilai Islam dan akhlak mulia sejak dini.</p>
+                    <h3><i class="fas fa-mosque"></i> Pendidikan Keislaman</h3>
+                    <p>Doa harian, hafalan surat pendek, praktik ibadah sederhana, serta pembentukan akhlak mulia.</p>
                 </div>
             </div>
         </section>
         
         <section class="tab-content" id="aktivitas">
-            <h2>Aktivitas dan Kegiatan</h2>
-            <p>Kami menawarkan berbagai aktivitas untuk meningkatkan pembelajaran, termasuk:</p>
+            <h2>Aktivitas Unggulan</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3><i class="fas fa-book"></i> Sesi Bercerita</h3>
-                    <p>Membacakan cerita yang edukatif dan menghibur untuk merangsang imajinasi anak.</p>
+                    <h3><i class="fas fa-palette"></i> Kegiatan Kreatif</h3>
+                    <p>Menggambar, mewarnai, kolase, dan berbagai kerajinan tangan untuk menumbuhkan kreativitas.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-leaf"></i> Bermain di Udara Terbuka</h3>
-                    <p>Aktivitas outdoor untuk mengembangkan kesehatan dan keterampilan motorik.</p>
+                    <h3><i class="fas fa-book-open"></i> Storytelling & Literasi</h3>
+                    <p>Dongeng interaktif untuk mengembangkan imajinasi dan kecintaan terhadap membaca.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-palette"></i> Workshop Seni dan Kerajinan</h3>
-                    <p>Kegiatan kreatif yang mengasah keterampilan tangan dan imajinasi anak.</p>
+                    <h3><i class="fas fa-hands-praying"></i> Pembiasaan Ibadah</h3>
+                    <p>Praktik doa dan nilai-nilai Islam secara sederhana dan menyenangkan.</p>
                 </div>
                 <div class="program-card">
-                    <h3><i class="fas fa-bus"></i> Kunjungan Lapangan</h3>
-                    <p>Eksplorasi lingkungan sekitar untuk pembelajaran praktis dan pengalaman nyata.</p>
+                    <h3><i class="fas fa-tree"></i> Outbound & Senam Ceria</h3>
+                    <p>Melatih keberanian, kerja sama, serta menjaga kesehatan dan kebugaran anak.</p>
+                </div>
+                <div class="program-card">
+                    <h3><i class="fas fa-star"></i> Pentas Seni & PHBI</h3>
+                    <p>Mengasah bakat, kreativitas, dan rasa percaya diri melalui berbagai kegiatan dan peringatan hari besar.</p>
                 </div>
             </div>
         </section>
