--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿﻿﻿﻿﻿﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,23 +65,23 @@
             <div class="mission-grid">
                 <div class="card">
                     <h3><i class="far fa-star fa-icon-green"></i> Visi MWC NU</h3>
-                    <p>Menjadi lembaga pendidikan terdepan yang menghasilkan generasi beriman, berilmu, dan bermanfaat bagi masyarakat dengan mengintegrasikan nilai-nilai Nahdlatul Ulama, akademis unggul, dan keterampilan abad ke-21.</p>
+                    <p>Menjadikan MWC NU sebagai organisasi keagamaan yang kokoh dalam menjaga ajaran Ahlussunnah wal Jama’ah, memperkuat ukhuwah islamiyah, dan berperan aktif untuk kemaslahatan umat, masyarakat yang sejahtera, berakhlak mulia, serta berkeadilan.</p>
                 </div>
                 <div class="card">
                     <h3><i class="far fa-bullseye fa-icon-green"></i> Misi MWC NU</h3>
                     <ul style="margin: 10px 0; padding-left: 20px;">
-                        <li>Menyelenggarakan pendidikan berkualitas dari usia dini hingga menengah atas</li>
-                        <li>Mengembangkan karakter Islami dan akhlak mulia dalam setiap siswa</li>
-                        <li>Menciptakan lingkungan belajar yang inklusif dan mendorong keunggulan akademik</li>
-                        <li>Mempersiapkan siswa dengan keterampilan praktis dan relevan dengan industri</li>
-                        <li>Memberdayakan masyarakat melalui pendidikan dan pembinaan berkelanjutan</li>
+                        <li>Menguatkan dan mengembangkan ajaran Islam Ahlussunnah wal Jama’ah An-Nahdliyah di tengah masyarakat.</li>
+                        <li>Meningkatkan ukhuwah islamiyah, ukhuwah wathaniyah, dan ukhuwah basyariyah demi terciptanya persatuan dan kerukunan umat.</li>
+                        <li>Memberdayakan masyarakat dalam bidang keagamaan, sosial, pendidikan, dan ekonomi berbasis nilai-nilai Islam rahmatan lil ‘alamin.</li>
+                        <li>Meningkatkan kualitas kader dan kepemimpinan Nahdlatul Ulama melalui pembinaan dan pelatihan berkelanjutan.</li>
+                        <li>Menjalin sinergi dengan pemerintah, lembaga pendidikan, pesantren, dan organisasi kemasyarakatan untuk kemaslahatan umat.</li>
                     </ul>
                 </div>
             </div>
         </section>
 
         <section class="programs-section">
-            <h2><i class="far fa-book fa-icon-green"></i> Program Pendidikan Kami</h2>
+            <h2><i class="fas fa-graduation-cap fa-icon-green"></i> Program Pendidikan Kami</h2>
             <div class="card">
                 <h3><i class="fas fa-graduation-cap fa-icon-green"></i> Taman Kanak-Kanak (TK)</h3>
                 <p>Membangun fondasi pendidikan yang kuat dengan metode bermain sambil belajar. Fokus pada perkembangan sosial, emosional, dan kognitif anak.</p>
@@ -146,58 +146,53 @@
                 </div>
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-chalkboard-user fa-icon-green"></i></span>
-                    <div class="stat-number">120+</div>
+                    <div class="stat-number">55+</div>
                     <div class="stat-label">Guru Profesional</div>
                 </div>
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-user-graduate fa-icon-green"></i></span>
-                    <div class="stat-number">1,200+</div>
+                    <div class="stat-number">900+</div>
                     <div class="stat-label">Siswa Aktif</div>
                 </div>
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-building fa-icon-green"></i></span>
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">30+</div>
                     <div class="stat-label">Ruang Kelas</div>
                 </div>
             </div>
         </section>
 
         <!-- Fitur Unggulan -->
-        <section>
-            <h2><i class="fas fa-star fa-icon-green"></i> Fasilitas dan Fitur Unggulan</h2>
-            <div class="facility-grid">
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="fas fa-flask-vial fa-icon-green"></i></div>
-                    <h4>Laboratorium Sains</h4>
-                    <p>Lengkap dengan peralatan modern untuk praktik IPA dan biologi</p>
+        <section id="keunggulan">
+            <h2><i class="far fa-lightbulb fa-icon-green"></i> Fasilitas dan Fitur Keunggulan Kami</h2>
+            <div class="program-grid">
+                <div class="program-card">
+                    <h3><i class="fas fa-school fa-icon-green"></i> Pendidikan Terpadu TK – SD – MTs – SMK</h3>
+                    <p>Sistem pendidikan berkelanjutan dalam satu naungan Ma’arif NU, mendampingi siswa dari usia dini hingga siap kerja atau kuliah.</p>
                 </div>
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="fas fa-computer fa-icon-green"></i></div>
-                    <h4>Laboratorium Komputer</h4>
-                    <p>Ruang belajar teknologi informasi dengan perangkat terkini</p>
+                <div class="program-card">
+                    <h3><i class="fas fa-mosque fa-icon-green"></i> Kurikulum Nasional + Ke-NU-an</h3>
+                    <p>Perpaduan akademik berkualitas dengan nilai Ahlussunnah wal Jama’ah untuk membentuk generasi cerdas dan berakhlakul karimah.</p>
                 </div>
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="far fa-book fa-icon-green"></i></div>
-                    <h4>Perpustakaan Digital</h4>
-                    <p>Koleksi buku dan sumber pembelajaran online yang lengkap</p>
+                <div class="program-card">
+                    <h3><i class="fas fa-quran fa-icon-green"></i> Fasilitas Ibadah & Program Tahfidz</h3>
+                    <p>Musholla representatif, pembiasaan sholat berjamaah, serta program hafalan Al-Qur’an di semua jenjang pendidikan.</p>
                 </div>
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="fas fa-mosque fa-icon-green"></i></div>
-                    <h4>Masjid dan Musholla</h4>
-                    <p>Fasilitas ibadah yang nyaman untuk pembelajaran dan pembiasaan nilai Islam</p>
+                <div class="program-card">
+                    <h3><i class="fas fa-flask fa-icon-green"></i> Laboratorium & Sarana Praktik Lengkap</h3>
+                    <p>Lab IPA, Lab Komputer, serta ruang praktik kejuruan SMK yang mendukung pembelajaran berbasis teknologi dan praktik langsung.</p>
                 </div>
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="fas fa-football fa-icon-green"></i></div>
-                    <h4>Lapangan Olahraga</h4>
-                    <p>Ruang outdoor lengkap untuk berbagai kegiatan olahraga</p>
+                <div class="program-card">
+                    <h3><i class="fas fa-chalkboard-user fa-icon-green"></i> Guru Profesional & Berpengalaman</h3>
+                    <p>Didukung tenaga pendidik kompeten yang berdedikasi dalam menciptakan pembelajaran aktif, kreatif, dan inspiratif.</p>
                 </div>
-                <div class="facility-item">
-                    <div class="facility-icon"><i class="fas fa-palette fa-icon-green"></i></div>
-                    <h4>Studio Seni dan Musik</h4>
-                    <p>Ruang kreatif untuk pengembangan bakat seni siswa</p>
+                <div class="program-card">
+                    <h3><i class="fas fa-star fa-icon-green"></i> Ekstrakurikuler & Pengembangan Bakat</h3>
+                    <p>Olahraga, seni, organisasi, dan teknologi untuk membentuk siswa percaya diri, kreatif, dan siap bersaing di masa depan.</p>
                 </div>
             </div>
-        </section>
+    </section>
+
 
         <!-- Contact Section -->
         <section class="contact-cta">
