perbaikan warna login btn

--- a/pages/bp3nu-profile.html
+++ b/pages/bp3nu-profile.html
@@ -54,15 +54,27 @@
 
     <main class="container">
         <!-- Hero Section -->
-        <section class="hero-section-school">
-            <h2>Badan Pelaksana Penyelenggara Pendidikan Ma'arif Nahdlatul Ulama (BP3MNU)</h2>
+        <!-- <section class="hero-section-school">
+            <h2>Badan Perencanaan dan Pengembangan Pendidikan Ma’arif NU (BP3MNU)</h2>
             <p>Organisasi Pengurus dan Struktur Tata Kelola Majelis Wakil Cabang Sidoarjo Nahdlatul Ulama</p>
-        </section>
+        </section> -->
 
         <!-- Tentang BP3MNU -->
-        <section>
+       <section>
             <h2>Tentang BP3MNU</h2>
-            <p>BP3MNU adalah unit organisasi yang dibentuk oleh Nahdlatul Ulama (NU) melalui Lembaga Pendidikan Ma'arif NU untuk menjalankan fungsi penyelenggaraan dan pengelolaan satuan pendidikan di lingkungan NU. Lembaga ini berkedudukan sebagai badan pelaksana yang mengonsolidasikan tata kelola pendidikan agar mandiri dan sesuai dengan nilai-nilai Aswaja..</p>
+            <p>
+                BP3MNU (Badan Perencanaan dan Pengembangan Pendidikan Ma’arif Nahdlatul Ulama) 
+                adalah unit organisasi yang dibentuk oleh Nahdlatul Ulama melalui Lembaga Pendidikan 
+                Ma’arif NU untuk menjalankan fungsi perencanaan, penyelenggaraan, dan pengelolaan 
+                satuan pendidikan di lingkungan NU. 
+            </p>
+            <p>
+                Lembaga ini berkedudukan sebagai badan pelaksana yang mengonsolidasikan tata kelola 
+                pendidikan agar lebih profesional, mandiri, dan terarah, serta tetap berlandaskan 
+                nilai-nilai Ahlussunnah wal Jama’ah (Aswaja). BP3MNU berperan dalam meningkatkan 
+                mutu pendidikan, memperkuat manajemen lembaga, serta mendorong inovasi pembelajaran 
+                yang relevan dengan perkembangan zaman.
+            </p>
         </section>
 
         <!-- Struktur Organisasi -->
@@ -158,7 +170,7 @@
             <h2>Fungsi dan Tanggung Jawab Utama</h2>
             <div class="program-grid">
                 <div class="program-card">
-                    <h3>📋 Pengawasan Pengelolaan</h3>
+                    <h3><i class="fas fa-clipboard-check"></i> Pengawasan Pengelolaan</h3>
                     <p>Mengawasi pengelolaan administratif, finansial, dan operasional lembaga pendidikan secara menyeluruh.</p>
                 </div>
                 <div class="program-card">
