--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 <div class="hero-subtitle">Selamat datang di Website</div>
                 <h1 class="hero-title">Berkhidmat untuk Umat, Mencetak Generasi Beradab & Bermartabat</h1>
                 <p class="hero-description">Melalui semangat Nahdlatul Ulama, kami berkomitmen menyelenggarakan pendidikan berkualitas yang berlandaskan nilai Ahlussunnah wal Jama'ah An-Nahdliyah untuk mewujudkan generasi yang unggul secara intelektual dan kokoh secara spiritual.</p>
-                <!-- <a href="pages/spmb.html" class="hero-cta">Mulai Pendaftaran</a> -->
             </div>
         </section>
 
@@ -225,7 +224,7 @@
 
                 <!-- Map -->
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8340866024457!2d112.73804!3d-7.43!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e8ff9f7f7f7f%3A0x7f7f7f7f7f7f7f7f!2sJl.%20Raya%20Ngaban%20(Utara%20Pasar%20Ngaban),%20Ngaban,%20Tanggulangin,%20Sidoarjo%2061272,%20Jawa%20Timur!5e0!3m2!1sen!2sid!4v1" width="100%" height="100%" style="border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps?q=-7.499972,112.6915319&z=17&output=embed" width="100%" height="400" style="border:0; border-radius:12px;" loading="lazy" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
