Penambahan kontak di navbar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         </ul>
                     </li>
                     <li><a href="pages/blog.html">Blog</a></li>
+                    <li><a href="pages/contact.html"></i> Contact</a></li>
                     <li><a href="login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
