--- a/pages/admin.html
+++ b/pages/admin.html
@@ -389,6 +389,7 @@
                         </ul>
                     </li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                     <li><a href="../login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
